[package]
name = "gitstats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
futures = "0.3.30"
git2 = "0.18.1"
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
simple-cmd = "0.0.19"
thiserror = "1.0.56"
threadpool = "1.8.1"
tracing = "0.1.40"
lazy_static = "1.4.0"
regex = "1.10.3"

[dev-dependencies]
tracing-subscriber = "0.3.18"
itertools = "0.12.1"
