[package]
name = "gitstats"
version = "0.0.1-alpha7"
edition = "2021"
license = "MIT"
description = "fetch stats from a git repository"
homepage = "https://github.com/sephiroth74/gitstats"
repository = "https://github.com/sephiroth74/gitstats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
simple-cmd = "0.0.19"
thiserror = "1.0.56"
tracing = "0.1.40"
lazy_static = "1.4.0"
regex = "1.10.3"
num-traits = "0.2.17"
which = "6.0.0"

[dev-dependencies]
tracing-subscriber = "0.3.18"
textplots = "0.8.6"
itertools = "0.12.1"
comfy-table = "7.1.0"
humansize = "2.1.3"
